tests/invalid/pow_non_numeric/main.py
x: bool = True
y: bool = False
z: bool = pow(x, y)
